@@ -1,4 +1,5 @@
 Modularity:  0.452381
 Membership: 0 0 0 0 0 1 1 1 1 1 
-Modularity:  0.394231
-Membership: 0 1 1 1 0 0 0 1 2 1 0 0 1 1 2 2 0 1 2 0 2 1 2 2 3 3 2 2 3 2 2 3 2 2 
+Warning: Modularity of the result is less than the maximum modularity possible
+Modularity:  0.338922
+Membership: 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 1 0 0 1 0 1 0 1 1 1 1 1 1 1 1 1 1 1 1 
