@@ -1,3 +1,9 @@
+2007-04-17  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* src/community.c (igraph_community_clauset) : speed improvements
+	* src/spmatrix.c (igraph_i_spmatrix_clear_row_fast)
+	(igraph_i_spmatrix_cleanup) : added
+
 2007-04-15  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/adjlist.c (IGRAPH_I_SORT_SIMPLIFY, IGRAPH_I_SORT) : removed
